packages/prop-house-webapp/src/components/InspirationCard/InspirationCard.module.css
.inspoHeader {
  padding-left: 2rem;
}
.inspoHeader h2 {
  font-size: 1.2rem;
  font-weight: bold;
}
.itemCard {
  border-radius: 20px !important;
}
.itemCard img {
  border-top-left-radius: 19px !important;
  border-top-right-radius: 19px !important;
}
.arrow {
  float: right;
}

